// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test children as function properties passes down all interaction functions and store objects 1`] = `
Object {
  "errors": Object {},
  "fields": Object {},
  "setTouchedOnEvent": [Function],
  "validateAll": [Function],
  "validateOnEvent": [Function],
  "validateOne": [Function],
  "warnings": Object {},
}
`;

exports[`Test touched/dirty behavior adds dirty to field-state on change 1`] = `
Object {
  "errorCount": 0,
  "errors": Object {},
  "fields": Object {
    "field_3": Object {
      "checked": false,
      "dirty": true,
      "value": "on",
    },
  },
  "warningCount": 0,
  "warnings": Object {},
}
`;

exports[`Test touched/dirty behavior adds touched to field-state on blur 1`] = `
Object {
  "errorCount": 0,
  "errors": Object {},
  "fields": Object {
    "field_2": Object {
      "touched": true,
      "value": "",
    },
  },
  "warningCount": 0,
  "warnings": Object {},
}
`;

exports[`Test touched/dirty behavior validates field and does not set dirty when setDirty is marked as false 1`] = `
Object {
  "errorCount": 0,
  "errors": Object {},
  "fields": Object {
    "field_2": Object {
      "value": "",
    },
  },
  "warningCount": 0,
  "warnings": Object {},
}
`;

exports[`Test user interaction Passable validation scenarios uses \`specific\` argument to only validate field_1 on change (error) 1`] = `
Object {
  "errorCount": 0,
  "errors": Object {},
  "fields": Object {
    "field_1": Object {
      "dirty": true,
      "value": "",
    },
  },
  "warningCount": 0,
  "warnings": Object {},
}
`;

exports[`Test user interaction Passable validation scenarios uses \`specific\` argument to only validate field_4 on change (warn) 1`] = `
Object {
  "errorCount": 0,
  "errors": Object {},
  "fields": Object {
    "field_4": Object {
      "dirty": true,
      "value": "",
    },
  },
  "warningCount": 0,
  "warnings": Object {},
}
`;

exports[`Test user interaction Passable validation scenarios validates the whole form on submit 1`] = `
Object {
  "errorCount": 0,
  "errors": Object {},
  "fields": Object {},
  "warningCount": 0,
  "warnings": Object {},
}
`;
